[gd_scene load_steps=19 format=2]

[ext_resource path="res://Nexa.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://images/job.png" type="Texture" id=2]
[ext_resource path="res://images/skill-influence.png" type="Texture" id=3]
[ext_resource path="res://scenes/cards/job_card.gd" type="Script" id=4]
[ext_resource path="res://images/skill-knowledge.png" type="Texture" id=5]
[ext_resource path="res://images/skill-piloting.png" type="Texture" id=6]
[ext_resource path="res://scenes/cardfont.tres" type="DynamicFont" id=7]
[ext_resource path="res://images/skill-tech.png" type="Texture" id=8]
[ext_resource path="res://images/patrol-c-icon.png" type="Texture" id=9]
[ext_resource path="res://images/roll.png" type="Texture" id=10]
[ext_resource path="res://images/skill-strength.png" type="Texture" id=11]
[ext_resource path="res://images/skill-stealth.png" type="Texture" id=12]
[ext_resource path="res://images/skill-tactics.png" type="Texture" id=13]
[ext_resource path="res://images/positive-rep-a.png" type="Texture" id=14]
[ext_resource path="res://images/yes.png" type="Texture" id=15]
[ext_resource path="res://images/fame.png" type="Texture" id=16]
[ext_resource path="res://images/to.png" type="Texture" id=17]

[sub_resource type="DynamicFont" id=1]
size = 10
use_filter = true
font_data = ExtResource( 1 )

[node name="JobCard" type="VBoxContainer"]
unique_name_in_owner = true
margin_left = 7.0
margin_top = 4.0
margin_right = 92.0
margin_bottom = 124.0
custom_constants/separation = 0
script = ExtResource( 4 )

[node name="Top" type="HBoxContainer" parent="."]
margin_right = 87.0
margin_bottom = 19.0

[node name="Type" type="MarginContainer" parent="Top"]
margin_right = 65.0
margin_bottom = 19.0
size_flags_horizontal = 3
custom_constants/margin_top = 4
custom_constants/margin_left = 27

[node name="Type" type="HBoxContainer" parent="Top/Type"]
margin_left = 27.0
margin_top = 4.0
margin_right = 65.0
margin_bottom = 19.0

[node name="Icon" type="TextureRect" parent="Top/Type/Type"]
margin_right = 12.0
margin_bottom = 15.0
texture = ExtResource( 2 )

[node name="Help" type="MarginContainer" parent="Top"]
margin_left = 69.0
margin_right = 87.0
margin_bottom = 19.0

[node name="Help" type="Button" parent="Top/Help"]
margin_right = 18.0
margin_bottom = 19.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
disabled = true
text = "?"

[node name="Card" type="MarginContainer" parent="."]
margin_top = 19.0
margin_right = 87.0
margin_bottom = 120.0
size_flags_vertical = 3
custom_constants/margin_top = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Card"]
margin_top = 8.0
margin_right = 87.0
margin_bottom = 101.0
custom_constants/separation = 2

[node name="Name" type="Label" parent="Card/VBoxContainer"]
unique_name_in_owner = true
margin_right = 87.0
margin_bottom = 12.0
rect_min_size = Vector2( 0, 12 )
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
text = "Dreb Favor"

[node name="Skills" type="HBoxContainer" parent="Card/VBoxContainer"]
margin_top = 14.0
margin_right = 87.0
margin_bottom = 26.0
custom_constants/separation = 4

[node name="Success" type="TextureRect" parent="Card/VBoxContainer/Skills"]
margin_right = 12.0
margin_bottom = 12.0
texture = ExtResource( 10 )

[node name="Label" type="Label" parent="Card/VBoxContainer/Skills"]
margin_left = 16.0
margin_right = 19.0
margin_bottom = 12.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
text = ":"

[node name="Skills" type="HBoxContainer" parent="Card/VBoxContainer/Skills"]
unique_name_in_owner = true
margin_left = 23.0
margin_right = 71.0
margin_bottom = 12.0
custom_constants/separation = 0

[node name="Influence" type="TextureRect" parent="Card/VBoxContainer/Skills/Skills"]
unique_name_in_owner = true
margin_right = 12.0
margin_bottom = 12.0
texture = ExtResource( 3 )

[node name="Knowledge" type="TextureRect" parent="Card/VBoxContainer/Skills/Skills"]
unique_name_in_owner = true
margin_left = 12.0
margin_right = 24.0
margin_bottom = 12.0
texture = ExtResource( 5 )

[node name="Piloting" type="TextureRect" parent="Card/VBoxContainer/Skills/Skills"]
unique_name_in_owner = true
margin_left = 24.0
margin_right = 36.0
margin_bottom = 12.0
texture = ExtResource( 6 )

[node name="Stealth" type="TextureRect" parent="Card/VBoxContainer/Skills/Skills"]
unique_name_in_owner = true
visible = false
margin_left = 36.0
margin_right = 48.0
margin_bottom = 12.0
texture = ExtResource( 12 )

[node name="Strength" type="TextureRect" parent="Card/VBoxContainer/Skills/Skills"]
unique_name_in_owner = true
visible = false
margin_left = 36.0
margin_right = 48.0
margin_bottom = 12.0
texture = ExtResource( 11 )

[node name="Tactics" type="TextureRect" parent="Card/VBoxContainer/Skills/Skills"]
unique_name_in_owner = true
visible = false
margin_left = 36.0
margin_right = 48.0
margin_bottom = 12.0
texture = ExtResource( 13 )

[node name="Tech" type="TextureRect" parent="Card/VBoxContainer/Skills/Skills"]
unique_name_in_owner = true
margin_left = 36.0
margin_right = 48.0
margin_bottom = 12.0
texture = ExtResource( 8 )

[node name="To" type="HBoxContainer" parent="Card/VBoxContainer"]
margin_top = 28.0
margin_right = 87.0
margin_bottom = 40.0

[node name="ToIcon" type="TextureRect" parent="Card/VBoxContainer/To"]
margin_right = 12.0
margin_bottom = 12.0
texture = ExtResource( 17 )

[node name="Label" type="Label" parent="Card/VBoxContainer/To"]
margin_left = 16.0
margin_right = 19.0
margin_bottom = 12.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
text = ":"

[node name="To" type="Label" parent="Card/VBoxContainer/To"]
unique_name_in_owner = true
margin_left = 23.0
margin_right = 43.0
margin_bottom = 12.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
text = "Clot"

[node name="Deliver" type="HBoxContainer" parent="Card/VBoxContainer"]
margin_top = 42.0
margin_right = 87.0
margin_bottom = 54.0

[node name="Success" type="TextureRect" parent="Card/VBoxContainer/Deliver"]
margin_right = 12.0
margin_bottom = 12.0
texture = ExtResource( 15 )

[node name="Label" type="Label" parent="Card/VBoxContainer/Deliver"]
margin_left = 16.0
margin_right = 19.0
margin_bottom = 12.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
text = ":"

[node name="HBoxContainer" type="HBoxContainer" parent="Card/VBoxContainer/Deliver"]
margin_left = 23.0
margin_right = 87.0
margin_bottom = 12.0
custom_constants/separation = 1

[node name="Reward" type="HBoxContainer" parent="Card/VBoxContainer/Deliver/HBoxContainer"]
unique_name_in_owner = true
margin_right = 21.0
margin_bottom = 12.0
custom_constants/separation = 0

[node name="RewardLabel" type="Label" parent="Card/VBoxContainer/Deliver/HBoxContainer/Reward"]
unique_name_in_owner = true
margin_right = 12.0
margin_bottom = 12.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
text = "15"

[node name="Label" type="Label" parent="Card/VBoxContainer/Deliver/HBoxContainer/Reward"]
margin_left = 12.0
margin_right = 21.0
margin_bottom = 12.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
text = "K "

[node name="Fame" type="HBoxContainer" parent="Card/VBoxContainer/Deliver/HBoxContainer"]
unique_name_in_owner = true
margin_left = 22.0
margin_right = 41.0
margin_bottom = 12.0
custom_constants/separation = 0

[node name="FameLabel" type="Label" parent="Card/VBoxContainer/Deliver/HBoxContainer/Fame"]
unique_name_in_owner = true
margin_right = 7.0
margin_bottom = 12.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
text = "2"

[node name="FameTexture" type="TextureRect" parent="Card/VBoxContainer/Deliver/HBoxContainer/Fame"]
margin_left = 7.0
margin_right = 19.0
margin_bottom = 12.0
texture = ExtResource( 16 )

[node name="PositiveRep" type="HBoxContainer" parent="Card/VBoxContainer/Deliver/HBoxContainer"]
unique_name_in_owner = true
visible = false
margin_left = 38.0
margin_right = 55.0
margin_bottom = 12.0
custom_constants/separation = 0

[node name="Rep" type="Label" parent="Card/VBoxContainer/Deliver/HBoxContainer/PositiveRep"]
margin_right = 5.0
margin_bottom = 12.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
text = "1"

[node name="PositiveRepTexture" type="TextureRect" parent="Card/VBoxContainer/Deliver/HBoxContainer/PositiveRep"]
unique_name_in_owner = true
margin_left = 5.0
margin_right = 17.0
margin_bottom = 12.0
texture = ExtResource( 9 )

[node name="NegativeRep" type="HBoxContainer" parent="Card/VBoxContainer/Deliver/HBoxContainer"]
unique_name_in_owner = true
margin_left = 42.0
margin_right = 64.0
margin_bottom = 12.0
custom_constants/separation = 0

[node name="Rep" type="Label" parent="Card/VBoxContainer/Deliver/HBoxContainer/NegativeRep"]
margin_right = 10.0
margin_bottom = 12.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
text = "-1"

[node name="NegativeRepTexture" type="TextureRect" parent="Card/VBoxContainer/Deliver/HBoxContainer/NegativeRep"]
unique_name_in_owner = true
margin_left = 10.0
margin_right = 22.0
margin_bottom = 12.0
texture = ExtResource( 9 )

[node name="Overclock" type="HBoxContainer" parent="Card/VBoxContainer"]
unique_name_in_owner = true
margin_top = 56.0
margin_right = 87.0
margin_bottom = 68.0

[node name="OCPositiveRepTexture" type="TextureRect" parent="Card/VBoxContainer/Overclock"]
unique_name_in_owner = true
margin_right = 12.0
margin_bottom = 12.0
texture = ExtResource( 14 )

[node name="Label" type="Label" parent="Card/VBoxContainer/Overclock"]
margin_left = 16.0
margin_right = 19.0
margin_bottom = 12.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
text = ":"

[node name="HBoxContainer" type="HBoxContainer" parent="Card/VBoxContainer/Overclock"]
margin_left = 23.0
margin_right = 63.0
margin_bottom = 12.0
custom_constants/separation = 1

[node name="OCFame" type="HBoxContainer" parent="Card/VBoxContainer/Overclock/HBoxContainer"]
margin_right = 17.0
margin_bottom = 12.0
custom_constants/separation = 0

[node name="FameLabel" type="Label" parent="Card/VBoxContainer/Overclock/HBoxContainer/OCFame"]
margin_right = 5.0
margin_bottom = 12.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
text = "1"

[node name="OCFameTexture" type="TextureRect" parent="Card/VBoxContainer/Overclock/HBoxContainer/OCFame"]
margin_left = 5.0
margin_right = 17.0
margin_bottom = 12.0
texture = ExtResource( 16 )

[node name="OCNegativeRep" type="HBoxContainer" parent="Card/VBoxContainer/Overclock/HBoxContainer"]
margin_left = 18.0
margin_right = 40.0
margin_bottom = 12.0
custom_constants/separation = 0

[node name="Rep" type="Label" parent="Card/VBoxContainer/Overclock/HBoxContainer/OCNegativeRep"]
margin_right = 10.0
margin_bottom = 12.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
text = "-1"

[node name="OCNegativeRepTexture" type="TextureRect" parent="Card/VBoxContainer/Overclock/HBoxContainer/OCNegativeRep"]
unique_name_in_owner = true
margin_left = 10.0
margin_right = 22.0
margin_bottom = 12.0
texture = ExtResource( 9 )
